--- a/app/src/main/res/layout/activity_what__am__i__gonna__do__with__all__these__balloons.xml
+++ b/app/src/main/res/layout/activity_what__am__i__gonna__do__with__all__these__balloons.xml
@@ -3,16 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-
     <FrameLayout
         android:id="@+id/balloonSpace"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="3"
-        android:background="#a0ffa8">
-
-
+        android:background="#ffffa7e0">
     </FrameLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +27,6 @@
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
     </LinearLayout>
 
 </LinearLayout>
